퀴즈 결과 화면 구현 완료

--- a/src/main/frontend/src/locales/en.json
+++ b/src/main/frontend/src/locales/en.json
@@ -30,6 +30,9 @@
     "start" : "Start!",
     "correct" : "Correct!",
     "wrong" : "Wrong!",
-    "next" : "Next"
+    "next" : "Next",
+    "result" : "Result",
+    "rank" : "Level!",
+    "retry" : "Retry"
   }
 }
