--- a/src/main/frontend/src/locales/ja.json
+++ b/src/main/frontend/src/locales/ja.json
@@ -30,6 +30,9 @@
     "start" : "スタート",
     "correct" : "正解!",
     "wrong" : "不正解!",
-    "next" : "次の問題"
+    "next" : "次の問題",
+    "result" : "結果発表",
+    "rank" : "級!",
+    "retry" : "もう一度"
   }
 }
