--- a/src/main/frontend/src/locales/ko.json
+++ b/src/main/frontend/src/locales/ko.json
@@ -30,6 +30,9 @@
     "start" : "시작하기",
     "correct" : "정답!",
     "wrong" : "오답!",
-    "next" : "다음 문제"
+    "next" : "다음 문제",
+    "result" : "결과 발표",
+    "rank" : "급!",
+    "retry" : "다시하기"
   }
 }
