메인페이지 작업 / 툴팁 수정

--- a/src/main/frontend/src/locales/en.json
+++ b/src/main/frontend/src/locales/en.json
@@ -10,7 +10,8 @@
   },
   "search" : {
     "type" : "Type",
-    "result" : "Search results for"
+    "result" : "Search results for",
+    "placeholder":  "Name or Number"
   },
   "detail" : {
     "type" : "Type",
